# codez

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  COMPLETION_REPORT.md  Cargo.toml  IMPROVEMENTS.md  INDEX.md  QUICKSTART.md  README.md  STANDARDS.md  package-lock.json  package.json  patch.py  test_api.sh  test_script.js  verify_backend.py  verify_bug_fixes.py  verify_discussion_comments.py  verify_discussions.py  verify_final.py  verify_milestone_wiki.py  verify_orgs.py  verify_packages_actions.py  verify_projects.py  verify_reviews.py  verify_webhooks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.kiro/specs/codeza-platform/: design.md  requirements.md  tasks.md
codeza/: COMPARISON_AND_ROADMAP.md  PHASE_11_COMPLETE.md  PHASE_11_PROGRESS.md  PHASE_1_COMPLETION.md  PHASE_2_PROGRESS.md  PHASE_3_PROGRESS.md  PHASE_4_PROGRESS.md  PHASE_5_PROGRESS.md  PHASE_6_PROGRESS.md  README.md  docker-compose.yml
codeza/crates/api-gateway/: Cargo.toml
codeza/crates/api-gateway/src/: routing.rs
codeza/crates/api-gateway/src/routing/: auth.rs  cicd.rs  webhook.rs
codeza/crates/auth-service/src/: handlers.rs
codeza/crates/cicd-engine/src/: executor.rs  pipeline.rs
codeza/crates/git-service/src/: provider.rs
codeza/crates/git-service/src/providers/: gitea.rs  mod.rs
codeza/crates/mfe-manager/: Cargo.toml
codeza/crates/mfe-manager/src/: loader.rs
codeza/crates/msr/: Cargo.toml
codeza/crates/msr/src/: lib.rs  load_balancer.rs
codeza/crates/orchestrator/src/: lib.rs  routing.rs  superapp.rs
codeza/crates/registry/: Cargo.toml
codeza/crates/registry/src/: image.rs
codeza/crates/shared/: Cargo.toml
codeza/crates/shared/src/: alerting.rs  analytics_api.rs  error.rs  logging.rs  report_generator.rs  tracing_module.rs
codeza/migrations/: 003_create_roles_and_permissions.sql
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: circuit_breaker.rs  main.rs  openapi.rs  rate_limiter.rs  routing.rs  tests.rs
crates/api-gateway/src/routing/: auth.rs  cicd.rs  git.rs  mfe.rs  msr.rs  orchestrator.rs  registry.rs  webhook.rs
crates/api-gateway/src/tests/: end_to_end_flow.rs  orchestrator_flow.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: handlers.rs  lib.rs  user_service.rs
crates/backend/: Cargo.toml
crates/backend/src/: error.rs  main.rs  router.rs  tests.rs  validation.rs
crates/backend/src/handlers/: action.rs  admin.rs  discussion.rs  misc.rs  mod.rs  package.rs  project.rs  release.rs  repo.rs  user.rs
crates/cicd-engine/: Cargo.toml
crates/cicd-engine/src/: artifact.rs  config_loader.rs  db.rs  executor.rs  lib.rs  pipeline.rs  trigger.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  style.css
crates/frontend/src/: api.rs  main.rs
crates/frontend/src/components/: activity.rs  mod.rs  nav.rs
crates/frontend/src/pages/: actions.rs  admin.rs  common.rs  compare.rs  dashboard.rs  discussions.rs  misc.rs  mod.rs  org.rs  packages.rs  projects.rs  release.rs  repo.rs  user.rs
crates/git-service/: Cargo.toml
crates/git-service/src/: lib.rs  repository_service.rs  webhook.rs
crates/git-service/src/providers/: gitea.rs  github.rs  gitlab.rs  mod.rs
crates/mfe-manager/: Cargo.toml
crates/mfe-manager/src/: db.rs  federation.rs  lib.rs  loader.rs  mfe.rs
crates/mfe-manager/tests/: validation_test.rs
crates/msr/: Cargo.toml
crates/msr/src/: db.rs  health.rs  lib.rs  load_balancer.rs  service.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: db.rs  event.rs  lib.rs  service.rs  state.rs  superapp.rs
crates/registry/: Cargo.toml
crates/registry/src/: image.rs  lib.rs  push_pull.rs  tag.rs
crates/shared/: Cargo.toml
crates/shared/src/: analytics.rs  analytics_api.rs  analytics_tests.rs  auth.rs  auth_middleware.rs  auth_test.rs  config.rs  dashboard.rs  error.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  models.rs  report_generator.rs
migrations/: 001_create_users_table.sql  002_create_sessions_table.sql  004_create_cicd_tables.sql  005_create_mfe_tables.sql  006_create_superapp_tables.sql  007_create_msr_tables.sql  008_optimize_mfe_indices.sql  009_optimize_cicd_indices.sql
tests/: actions.spec.ts  branch_protection.spec.ts  discussions.spec.ts  issue_lock.spec.ts  issues.spec.ts  migrate.spec.ts  milestones.spec.ts  notifications.spec.ts  orgs.spec.ts  projects.spec.ts  pulls.spec.ts  repo_topics.spec.ts  stars_watches.spec.ts  user_keys.spec.ts  wiki.spec.ts
