[workspace]
members = [
    "crates/shared",
    "crates/api-gateway",
    "crates/auth-service",
    "crates/git-service",
    "crates/cicd-engine",
    "crates/registry",
    "crates/mfe-manager",
    "crates/msr",
    "crates/orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Codeza Team"]
license = "Apache-2.0"
repository = "https://github.com/analisaperlengkapan/codeza"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.8.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.17"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
config = "0.15.19"
jsonwebtoken = "10.2.0"
argon2 = "0.5"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
hyper = "1.8.1"
http = "1.3.1"
reqwest = { version = "0.12.24", features = ["json"] }
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
