[package]
name = "codeza-api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
codeza-mfe-manager = { path = "../mfe-manager" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
http = { workspace = true }

codeza-shared = { path = "../shared" }
codeza-auth-service = { path = "../auth-service" }
codeza-git-service = { path = "../git-service" }
codeza-cicd-engine = { path = "../cicd-engine" }
