[package]
name = "codeza-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

codeza-shared = { path = "../shared" }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
sqlx = { workspace = true }
