[package]
name = "codeza-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = "0.8"
hex = "0.4"
